--- a/exps/externals/UndirectedVertexColoring/CMakeLists.txt
+++ b/exps/externals/UndirectedVertexColoring/CMakeLists.txt
@@ -3,4 +3,4 @@ project(UndirectedVertexColoring C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(UndirectedVertexColoring main.c test.c)
+add_executable(UndirectedVertexColoring main_runable.c test.c main.c)
